# rust_sort

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  benchmark.sh  codecov.yml  generate_test_data.js  performance_comparison_table.md  test_data_generator.js
.githooks/: pre-commit
.github/: CODECOV_SETUP.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: check.sh
src/: adaptive_sort.rs  args.rs  config.rs  core_sort.rs  error.rs  external_sort.rs  hash_sort.rs  lib.rs  locale.rs  main.rs  radix_sort.rs  simd_compare.rs  zero_copy.rs
