[package]
name = "gnu-sort"
version = "1.0.5"
edition = "2021"
rust-version = "1.70.0"
authors = ["Arthur <multistream@gmail.com>"]
description = "High-performance Rust implementation of GNU sort with zero-copy operations, SIMD optimization, and parallel processing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/acefsm/rust_sort"
homepage = "https://github.com/acefsm/rust_sort"
documentation = "https://docs.rs/gnu-sort"
keywords = ["sorting", "gnu", "coreutils", "performance", "cli"]
categories = ["command-line-utilities", "algorithms"]
readme = "README.md"

[[bin]]
name = "sort"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
thiserror = "1.0"
num_cpus = "1.8"
crossbeam-channel = "0.5"
tempfile = "3.8"
memmap2 = "0.9"
rayon = "=1.7.0"
itertools = "0.12"
rand = "0.8"
parking_lot = "0.12"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"